--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,11 @@ nvidia-graphics-drivers (195.36.31-7) unstable; urgency=medium
     Apply upstream patch NVIDIA_kernel-260.19.34-778465.diff to fix
     information leak in the kernel module: kernel memory was returned
     uninitialized to user space.
+  * CVE-2012-0946:
+    Add upstream patch nvidia-blacklist-register-mapping-195.diff:
+    Closed a security vulnerability which made it possible for attackers to
+    reconfigure GPUs to gain access to arbitrary system memory. For further
+    details, see: http://nvidia.custhelp.com/app/answers/detail/a_id/3109
   * Add instructions how to switch driver installation from the NVIDIA way
     (running the *.run file) to the Debian way (using packages).
   * Let the bug-script collect detailed information about OpenGL and NVIDIA
