--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,14 @@
-nvidia-graphics-drivers (310.40-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (310.44-1) UNRELEASED; urgency=low
 
+  * New upstream long lived branch release 310.44 (2013-04-02).
+    * Fixed CVE-2013-0131: NVIDIA UNIX GPU Driver ARGB Cursor Buffer
+      Overflow in "NoScanout" Mode.  This buffer overflow, which occurred
+      when an X client installed a large ARGB cursor on an X server
+      running in NoScanout mode, could cause a denial of service (e.g.,
+      an X server segmentation fault), or could be exploited to achieve
+      arbitrary code execution.
+      For more details, see:
+      http://nvidia.custhelp.com/app/answers/detail/a_id/3290
   * New upstream long lived branch release 310.40 (2013-03-08).
     - Reduced the amount of time needed to establish framelock in some
       stereo configurations with many monitors.
@@ -44,7 +53,7 @@ nvidia-graphics-drivers (310.40-1) UNRELEASED; urgency=low
   * Update nv-readme.ids.
   * Add xorg-video-abi-14 as alternative dependency.
 
- -- Andreas Beckmann <anbe@debian.org>  Sun, 10 Mar 2013 17:57:05 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 05 Apr 2013 02:41:13 +0200
 
 nvidia-graphics-drivers (310.19-1) experimental; urgency=low
 
