mention CVE-2016-7382, CVE-2016-7389
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@6991 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (304.132-0~svn4wheezy) UNRELEASED; urgency=medium
 
   * New upstream legacy 304xx branch release 304.132 (2016-09-26).
+    * Fixed CVE-2016-7382, CVE-2016-7389.  (Closes: #846331)
     - Added /var/log/dmesg to the list of paths which are searched by
       nvidia-bug-report.sh for kernel messages.
     - Fixed a bug that caused kernel panics when using the NVIDIA driver on
@@ -69,7 +70,7 @@ nvidia-graphics-drivers (304.132-0~svn4wheezy) UNRELEASED; urgency=medium
     uses are no longer exported, causing a failure when the module is
     loaded at runtime. (Closes: #809324)
   * Add nvidia-user-pages.patch to fix nvidia kernel module build failure
-    for Linux 4.9.  (367.57-2)
+    for Linux 4.9 (367.57-2).
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 13:04:27 +0100
 
